update several pages

--- a/note/index.html
+++ b/note/index.html
@@ -63,6 +63,34 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
@@ -106,13 +134,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/spacemacs.html">Spacemacs</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <div class="article-link-date">
 2020년 4월 17일 수정</div>
 </div>
@@ -262,13 +283,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/caffeinate.html">caffeinate</a></h2>
 <div class="article-link-date">
 2020년 4월 13일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
-<div class="article-link-date">
-2020년 4월 12일 수정</div>
 </div>
 </div>
 </section>
