--- a/note/seorenn.html
+++ b/note/seorenn.html
@@ -63,25 +63,46 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Seorenn</h1>
-<div class="title-date">2020년 4월 12일 수정</div>
+<div class="title-date">2020년 4월 18일 수정</div>
 </header>
 <p>
-Seorenn(세오렌)은 우리은하 태양계 지구 대한민국에 사는 사람이다. 주로 소프트웨어 개발로 먹고 사는
-것으로 알려져 있다. Swift, Python을 좋아하는 것 같다. Java와 C++은 아주 혐오하는
-것 같다.
+Seorenn(세오렌)은 우리은하 태양계 지구 대한민국에 사는 사람이다.
+주로 잡다한 종류의 소프트웨어 개발로 먹고 사는 것으로 알려져 있다.
+</p>
+
+<p>
+주로 <a href="macos.html">macOS</a>에서 <a href="emacs.html">Emacs</a>를 활용해
+작업하는 것을 즐기는 편이다.
+참고로 <a href="emacs.html">Emacs</a> 설정은
+과거에는 <a href="spacemacs.html">Spacemacs</a>를 사용하다
+지금은 <a href="doom-emacs.html">Doom Emacs</a>를 즐겨 사용한다.
+</p>
+
+<p>
+프로그래밍 언어는
+<a href="swift.html">Swift</a>, <a href="python.html">Python</a>을 좋아하는 것 같다.
+Java와 C++은 아주 혐오하는 것 같다.
+</p>
+
+<p>
+들여쓰기는 스페이스 4칸을 선호한다. 탭을 쓰면 화낸다.
 </p>
 
 <p>
 기타 고전 건축이나 기둥에 흥분하는 변태 같다.
 </p>
 
-<div id="outline-container-org19809cd" class="outline-2">
-<h2 id="org19809cd">Sites</h2>
-<div class="outline-text-2" id="text-org19809cd">
+<div id="outline-container-org97761ae" class="outline-2">
+<h2 id="org97761ae">외부 링크</h2>
+<div class="outline-text-2" id="text-org97761ae">
 <ul class="org-ul">
-<li><a target="_blank" href="https://seorenn.tistory.com">🌏BLOG</a></li>
+<li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
 <li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
 <li><a target="_blank" href="https://youtube.com/c/seorenn">🌏Youtube Channel</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com">🌏Blog</a></li>
+<li><a target="_blank" href="https://healthyrenn.tistory.com">🌏Blog (2)</a></li>
+<li><a target="_blank" href="https://seorenn.blogspot.com">🌏Blog (3)</a> (업데이트 안 함)</li>
+<li><a target="_blank" href="https://rennflav.blogspot.com">🌏Blog (4)</a> (업데이트 안 함)</li>
 </ul>
 </div>
 </div>
