--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -68,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4608368">외부 링크</a></li>
+<li><a href="#orgc402e20">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -90,9 +90,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org4608368" class="outline-2">
-<h2 id="org4608368">외부 링크</h2>
-<div class="outline-text-2" id="text-org4608368">
+<div id="outline-container-orgc402e20" class="outline-2">
+<h2 id="orgc402e20">외부 링크</h2>
+<div class="outline-text-2" id="text-orgc402e20">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
@@ -104,6 +104,13 @@ gtag('config', 'UA-44534026-1');
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
