--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -63,24 +63,30 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Emacs Lisp</h1>
-<div class="title-date">2020년 4월 16일 수정</div>
+<div class="title-date">2020년 4월 18일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9d7f942">개념 메모</a>
+<li><a href="#org942aa7b">개념 메모</a>
 <ul>
-<li><a href="#org358615e">샤프(Sharpsign)</a></li>
-<li><a href="#orgfe4239e">단 따옴표(Single Quote)</a></li>
-<li><a href="#org57b0c5d">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#org31a3528">apply vs funcall</a></li>
-<li><a href="#org15c3da2">Character</a></li>
+<li><a href="#org0f64bfa">샤프(Sharpsign)</a></li>
+<li><a href="#orgebb4a3c">단 따옴표(Single Quote)</a></li>
+<li><a href="#org03452e5">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#orgeba9c12">apply vs funcall</a></li>
+<li><a href="#org0a0ad6f">Character</a></li>
 </ul>
 </li>
-<li><a href="#org0306aa8">에러 노트</a>
+<li><a href="#org9375921">코드 예제</a>
 <ul>
-<li><a href="#orgc0687dd">commandp</a></li>
-<li><a href="#orgdf174d9">안 쓰는 매개변수</a></li>
+<li><a href="#orgafa1e7b">타입 변환</a></li>
+<li><a href="#orga16b07a">셸 커맨드</a></li>
+</ul>
+</li>
+<li><a href="#orgf725c2e">에러 노트</a>
+<ul>
+<li><a href="#org06804e1">commandp</a></li>
+<li><a href="#org89bc0ad">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -93,13 +99,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org9d7f942" class="outline-2">
-<h2 id="org9d7f942">개념 메모</h2>
-<div class="outline-text-2" id="text-org9d7f942">
+<div id="outline-container-org942aa7b" class="outline-2">
+<h2 id="org942aa7b">개념 메모</h2>
+<div class="outline-text-2" id="text-org942aa7b">
 </div>
-<div id="outline-container-org358615e" class="outline-3">
-<h3 id="org358615e">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-org358615e">
+<div id="outline-container-org0f64bfa" class="outline-3">
+<h3 id="org0f64bfa">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-org0f64bfa">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -119,9 +125,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfe4239e" class="outline-3">
-<h3 id="orgfe4239e">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-orgfe4239e">
+<div id="outline-container-orgebb4a3c" class="outline-3">
+<h3 id="orgebb4a3c">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-orgebb4a3c">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -162,9 +168,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org57b0c5d" class="outline-3">
-<h3 id="org57b0c5d">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org57b0c5d">
+<div id="outline-container-org03452e5" class="outline-3">
+<h3 id="org03452e5">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-org03452e5">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -186,9 +192,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org31a3528" class="outline-3">
-<h3 id="org31a3528">apply vs funcall</h3>
-<div class="outline-text-3" id="text-org31a3528">
+<div id="outline-container-orgeba9c12" class="outline-3">
+<h3 id="orgeba9c12">apply vs funcall</h3>
+<div class="outline-text-3" id="text-orgeba9c12">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -222,9 +228,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-org15c3da2" class="outline-3">
-<h3 id="org15c3da2">Character</h3>
-<div class="outline-text-3" id="text-org15c3da2">
+<div id="outline-container-org0a0ad6f" class="outline-3">
+<h3 id="org0a0ad6f">Character</h3>
+<div class="outline-text-3" id="text-org0a0ad6f">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -241,13 +247,67 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </div>
 </div>
 </div>
-<div id="outline-container-org0306aa8" class="outline-2">
-<h2 id="org0306aa8">에러 노트</h2>
-<div class="outline-text-2" id="text-org0306aa8">
+<div id="outline-container-org9375921" class="outline-2">
+<h2 id="org9375921">코드 예제</h2>
+<div class="outline-text-2" id="text-org9375921">
 </div>
-<div id="outline-container-orgc0687dd" class="outline-3">
-<h3 id="orgc0687dd">commandp</h3>
-<div class="outline-text-3" id="text-orgc0687dd">
+<div id="outline-container-orgafa1e7b" class="outline-3">
+<h3 id="orgafa1e7b">타입 변환</h3>
+<div class="outline-text-3" id="text-orgafa1e7b">
+<p>
+숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
+</p>
+<div class="org-src-container">
+<pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #a9a1e1;">number-to-string</span> <span style="color: #da8548; font-weight: bold;">1</span><span style="color: #51afef;">)</span>
+</pre>
+</div>
+
+<div class="org-src-container">
+<pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #a9a1e1;">string-to-number</span> <span style="color: #98be65;">"1"</span><span style="color: #51afef;">)</span>
+</pre>
+</div>
+<p>
+굳이 설명할 필요는 없을 것 같다.
+</p>
+</div>
+</div>
+<div id="outline-container-orga16b07a" class="outline-3">
+<h3 id="orga16b07a"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-orga16b07a">
+<p>
+<a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #c678dd;">shell-command</span> <span style="color: #98be65;">"ls"</span><span style="color: #51afef;">)</span>
+</pre>
+</div>
+<p>
+작은 버퍼가 열리면서 결과가 표시된다.
+해당 함수의 반환 값은 유틸리티가 반환하는 숫자가 돌아온다.
+일반적인 UNIX 유틸리티는 성공 시 0을 반환한다는 점을 참고하자.
+</p>
+
+<p>
+반환 값이 아닌 출력물을 가로채려면 아래의 방식이 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #c678dd;">shell-command-to-string</span> <span style="color: #98be65;">"ls"</span><span style="color: #51afef;">)</span>
+</pre>
+</div>
+<p>
+이렇게 하면 결과가 문자열로 반환된다.
+파이프를 흉내 내려면 이 함수가 유용할 듯 하다.
+</p>
+</div>
+</div>
+</div>
+<div id="outline-container-orgf725c2e" class="outline-2">
+<h2 id="orgf725c2e">에러 노트</h2>
+<div class="outline-text-2" id="text-orgf725c2e">
+</div>
+<div id="outline-container-org06804e1" class="outline-3">
+<h3 id="org06804e1">commandp</h3>
+<div class="outline-text-3" id="text-org06804e1">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -267,9 +327,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-orgdf174d9" class="outline-3">
-<h3 id="orgdf174d9">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-orgdf174d9">
+<div id="outline-container-org89bc0ad" class="outline-3">
+<h3 id="org89bc0ad">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org89bc0ad">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
