update with 15 changes

--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -68,25 +68,25 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org942aa7b">개념 메모</a>
+<li><a href="#org4eaecf7">개념 메모</a>
 <ul>
-<li><a href="#org0f64bfa">샤프(Sharpsign)</a></li>
-<li><a href="#orgebb4a3c">단 따옴표(Single Quote)</a></li>
-<li><a href="#org03452e5">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#orgeba9c12">apply vs funcall</a></li>
-<li><a href="#org0a0ad6f">Character</a></li>
+<li><a href="#org4cfadbf">샤프(Sharpsign)</a></li>
+<li><a href="#org058e026">단 따옴표(Single Quote)</a></li>
+<li><a href="#org0d417b3">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#org2b26a76">apply vs funcall</a></li>
+<li><a href="#org5c485de">Character</a></li>
 </ul>
 </li>
-<li><a href="#org9375921">코드 예제</a>
+<li><a href="#org1217010">코드 예제</a>
 <ul>
-<li><a href="#orgafa1e7b">타입 변환</a></li>
-<li><a href="#orga16b07a">셸 커맨드</a></li>
+<li><a href="#org45be7df">타입 변환</a></li>
+<li><a href="#orgb729cd2">셸 커맨드</a></li>
 </ul>
 </li>
-<li><a href="#orgf725c2e">에러 노트</a>
+<li><a href="#org42ef48c">에러 노트</a>
 <ul>
-<li><a href="#org06804e1">commandp</a></li>
-<li><a href="#org89bc0ad">안 쓰는 매개변수</a></li>
+<li><a href="#org635c67f">commandp</a></li>
+<li><a href="#org5029cb8">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
@@ -99,13 +99,13 @@ Lisp 언어를 의미한다.
 형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org942aa7b" class="outline-2">
-<h2 id="org942aa7b">개념 메모</h2>
-<div class="outline-text-2" id="text-org942aa7b">
+<div id="outline-container-org4eaecf7" class="outline-2">
+<h2 id="org4eaecf7">개념 메모</h2>
+<div class="outline-text-2" id="text-org4eaecf7">
 </div>
-<div id="outline-container-org0f64bfa" class="outline-3">
-<h3 id="org0f64bfa">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-org0f64bfa">
+<div id="outline-container-org4cfadbf" class="outline-3">
+<h3 id="org4cfadbf">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-org4cfadbf">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -125,9 +125,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgebb4a3c" class="outline-3">
-<h3 id="orgebb4a3c">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-orgebb4a3c">
+<div id="outline-container-org058e026" class="outline-3">
+<h3 id="org058e026">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-org058e026">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -168,9 +168,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org03452e5" class="outline-3">
-<h3 id="org03452e5">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org03452e5">
+<div id="outline-container-org0d417b3" class="outline-3">
+<h3 id="org0d417b3">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-org0d417b3">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -192,9 +192,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgeba9c12" class="outline-3">
-<h3 id="orgeba9c12">apply vs funcall</h3>
-<div class="outline-text-3" id="text-orgeba9c12">
+<div id="outline-container-org2b26a76" class="outline-3">
+<h3 id="org2b26a76">apply vs funcall</h3>
+<div class="outline-text-3" id="text-org2b26a76">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -228,9 +228,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-org0a0ad6f" class="outline-3">
-<h3 id="org0a0ad6f">Character</h3>
-<div class="outline-text-3" id="text-org0a0ad6f">
+<div id="outline-container-org5c485de" class="outline-3">
+<h3 id="org5c485de">Character</h3>
+<div class="outline-text-3" id="text-org5c485de">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -247,13 +247,13 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </div>
 </div>
 </div>
-<div id="outline-container-org9375921" class="outline-2">
-<h2 id="org9375921">코드 예제</h2>
-<div class="outline-text-2" id="text-org9375921">
+<div id="outline-container-org1217010" class="outline-2">
+<h2 id="org1217010">코드 예제</h2>
+<div class="outline-text-2" id="text-org1217010">
 </div>
-<div id="outline-container-orgafa1e7b" class="outline-3">
-<h3 id="orgafa1e7b">타입 변환</h3>
-<div class="outline-text-3" id="text-orgafa1e7b">
+<div id="outline-container-org45be7df" class="outline-3">
+<h3 id="org45be7df">타입 변환</h3>
+<div class="outline-text-3" id="text-org45be7df">
 <p>
 숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
 </p>
@@ -271,9 +271,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga16b07a" class="outline-3">
-<h3 id="orga16b07a"><a href="shell.html">셸</a> 커맨드</h3>
-<div class="outline-text-3" id="text-orga16b07a">
+<div id="outline-container-orgb729cd2" class="outline-3">
+<h3 id="orgb729cd2"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-orgb729cd2">
 <p>
 <a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
 </p>
@@ -301,13 +301,13 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgf725c2e" class="outline-2">
-<h2 id="orgf725c2e">에러 노트</h2>
-<div class="outline-text-2" id="text-orgf725c2e">
+<div id="outline-container-org42ef48c" class="outline-2">
+<h2 id="org42ef48c">에러 노트</h2>
+<div class="outline-text-2" id="text-org42ef48c">
 </div>
-<div id="outline-container-org06804e1" class="outline-3">
-<h3 id="org06804e1">commandp</h3>
-<div class="outline-text-3" id="text-org06804e1">
+<div id="outline-container-org635c67f" class="outline-3">
+<h3 id="org635c67f">commandp</h3>
+<div class="outline-text-3" id="text-org635c67f">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -327,9 +327,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-org89bc0ad" class="outline-3">
-<h3 id="org89bc0ad">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-org89bc0ad">
+<div id="outline-container-org5029cb8" class="outline-3">
+<h3 id="org5029cb8">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org5029cb8">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
@@ -366,14 +366,14 @@ Unused lexical argument 'bar'
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 4월 16일 수정</div>
+2020년 4월 18일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 16일 수정</div>
 </div>
