--- a/index.html
+++ b/index.html
@@ -96,6 +96,27 @@ gtag('config', 'UA-44534026-1');
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 4월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/swiftui.html">SwiftUI</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
@@ -132,27 +153,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/flake8.html">flake8</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
 </div>
