--- a/index.html
+++ b/index.html
@@ -89,21 +89,42 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
+2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
 </div>
@@ -132,27 +153,6 @@ gtag('config', 'UA-44534026-1');
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
 </div>
