--- a/note/flutter.html
+++ b/note/flutter.html
@@ -63,14 +63,15 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <header>
 <h1>Flutter</h1>
-<div class="title-date">2020년 4월 18일 수정</div>
+<div class="title-date">2020년 4월 19일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga3bc151">문제 해결</a>
+<li><a href="#org19f2c51">문제 해결</a>
 <ul>
-<li><a href="#orgf447385">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org3783a34">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org5c5da53">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -86,13 +87,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orga3bc151" class="outline-2">
-<h2 id="orga3bc151">문제 해결</h2>
-<div class="outline-text-2" id="text-orga3bc151">
+<div id="outline-container-org19f2c51" class="outline-2">
+<h2 id="org19f2c51">문제 해결</h2>
+<div class="outline-text-2" id="text-org19f2c51">
 </div>
-<div id="outline-container-orgf447385" class="outline-3">
-<h3 id="orgf447385">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-orgf447385">
+<div id="outline-container-org3783a34" class="outline-3">
+<h3 id="org3783a34">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org3783a34">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -122,6 +123,42 @@ Flutter "idevice<sub>id</sub>" cannot be opened because the developer cannot be 
 
 <p>
 가장 좋은 해결 방법은 구글 Flutter 개발팀이 애플의 인증을 받는 건데 왜 안 할까?
+</p>
+</div>
+</div>
+<div id="outline-container-org5c5da53" class="outline-3">
+<h3 id="org5c5da53">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org5c5da53">
+<p>
+<code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
+이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
+</p>
+<blockquote>
+<p>
+error: Building for iOS Simulator,
+but the linked and embedded framework 'App.framework'
+was built for iOS. (in target 'Runner' from project 'Runner')
+</p>
+</blockquote>
+<p>
+원인은 에러 대로 해당 프레임워크가 필요한 아키텍처 지원이 빠진 채로 빌드
+되었다는 어처구니 없는 오류인데 아직 자동으로 해결하는 방법은 모르겠다.
+</p>
+
+<p>
+수작업으로 해결하려면 위의 문제의 프레임워크를 그냥 지워버리면 된다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash"><span style="color: #ECBE7B;">rm</span> -rf ios/Flutter/App.framework
+</pre>
+</div>
+<p>
+이후 다시 <code>run</code> 시켜보면 문제는 해결된다.
+</p>
+
+<p>
+참고로 문제가 발생하는 프레임워크는 App.framework 뿐만 아니라 다양하다.
+사용하는 모듈에 따라 다를 수 있으니 그 경우에도 비슷하게 대처하자.
 </p>
 </div>
 </div>
