--- a/note/index.html
+++ b/note/index.html
@@ -63,21 +63,42 @@ gtag('config', 'UA-44534026-1');
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
+2020년 4월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 4월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
 </div>
@@ -126,13 +147,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
-<div class="article-link-date">
-2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/seorenn.html">Seorenn</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
@@ -157,13 +171,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/org-spreadsheet.html">Org 스프레드시트</a></h2>
 <div class="article-link-date">
 2020년 4월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/kubectl.html">kubectl</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 수정</div>
 </div>
 </div>
 <div class="article-link">
